--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --no-notify --respawn --transpile-only src/index.ts"
+    "dev": "ts-node-dev --no-notify --respawn --transpile-only src/index.ts",
+    "sls": "serverless deploy --stage prod"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "dependencies": {
     "@prisma/client": "2.28.0",
     "apollo-server": "2.25.2",
+    "apollo-server-lambda": "^3.1.2",
     "class-validator": "0.13.1",
     "graphql": "15.5.1",
     "graphql-scalars": "1.10.0",
@@ -32,8 +34,13 @@
     "@types/node": "12.20.19",
     "@types/ws": "7.4.7",
     "prisma": "2.28.0",
+    "serverless-dotenv-plugin": "^3.9.0",
+    "serverless-webpack": "^5.5.1",
+    "ts-loader": "^9.2.5",
     "ts-node": "10.2.0",
     "ts-node-dev": "1.1.8",
-    "typescript": "4.3.5"
+    "typescript": "4.3.5",
+    "webpack": "^5.50.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
