--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "webpack serve --hot"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "glob-parent": "^3.1.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -17,6 +20,7 @@
     "@babel/core": "^7.15.0",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/react": "^17.0.17",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
@@ -28,6 +32,8 @@
     "node-sass": "^6.0.1",
     "papaparse": "^5.3.1",
     "sass-loader": "^12.1.0",
+    "tslint": "^6.1.3",
+    "tslint-react": "^5.0.0",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2",
