--- a/client/.babelrc
+++ b/client/.babelrc
@@ -1,3 +1,3 @@
 {
-    "presets": ["@babel/preset-react", "@babel/typescript", ["@babel/env", { "modules": false }]] 
+    "presets": ["@babel/preset-react", "@babel/typescript", "@babel/preset-env"] 
 }
