--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.15.0",
     "@types/react": "^17.0.17",
+    "@types/react-dom": "^17.0.9",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
