--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --no-notify --respawn --transpile-only src/index.ts",
-    "sls": "serverless deploy --stage prod"
+    "sls:deploy": "serverless deploy --stage prod",
+    "dev:client": "webpack serve --config webpack.client.config.js --mode development --port 4321",
+    "dev:server": "sls offline start",
+    "start:dev": "concurrently \"npm run dev:server\" \"npm run dev:client\""
   },
   "repository": {
     "type": "git",
@@ -24,23 +27,39 @@
     "apollo-server": "2.25.2",
     "apollo-server-lambda": "^3.1.2",
     "class-validator": "0.13.1",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "concurrently": "^6.2.1",
     "graphql": "15.5.1",
     "graphql-scalars": "1.10.0",
+    "mini-css-extract-plugin": "^2.2.0",
     "reflect-metadata": "0.1.13",
     "type-graphql": "1.1.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-react": "^7.14.5",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/graphql": "14.5.0",
     "@types/node": "12.20.19",
     "@types/ws": "7.4.7",
+    "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^9.0.1",
+    "html-webpack-plugin": "^5.3.2",
     "prisma": "2.28.0",
+    "react-refresh": "^0.9.0",
+    "serverless": "^2.54.0",
     "serverless-dotenv-plugin": "^3.9.0",
+    "serverless-offline": "^8.0.0",
     "serverless-webpack": "^5.5.1",
     "ts-loader": "^9.2.5",
     "ts-node": "10.2.0",
     "ts-node-dev": "1.1.8",
+    "tsconfig-paths-webpack-plugin": "^3.5.1",
     "typescript": "4.3.5",
     "webpack": "^5.50.0",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-node-externals": "^3.0.0",
+    "webpack-stats-plugin": "^1.0.3"
   }
 }
